# tenable-identity-exposure-mcp

./: .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.sample.json  docker-compose.yml  pyproject.toml
src/tenable_tie_mcp/: __init__.py  catalog.py  client.py  server.py  util.py
