[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenable-tie-mcp"
version = "0.1.0"
description = "MCP server for Tenable Identity Exposure"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
]

[project.scripts]
tenable-tie-mcp = "tenable_tie_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tenable_tie_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
